# tree-sitter-mvl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mvl.pc.in
bindings/c/tree_sitter/: tree-sitter-mvl.h
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mvl/: __init__.py  binding.c
bindings/python/tree_sitter_mvl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMvlTests/: TreeSitterMvlTests.swift
queries/: folds.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basics.txt  full_programs.txt
